adding pie chart

--- a/Vasantha/cleaning/geo_code.ipynb
+++ b/Vasantha/cleaning/geo_code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "source": [
     "import pandas as pd\r\n",
     "import requests\r\n",
@@ -4632,10 +4632,10 @@
   },
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3.8.5 64-bit ('venv': venv)"
   },
   "interpreter": {
-   "hash": "eb0a5deb85624cf39522bd9ea766efe3b585b85d5e69ded4a98e5c69611b9570"
+   "hash": "0c3cbcf66c6b2915d01c195d06ccc3cb1c8d6e8d336a2ae7b942eed599aeeef6"
   }
  },
  "nbformat": 4,
